--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.22",
     "next": "14.1.4",
+    "next-intl": "^3.11.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
